# archinstall

./: .gitignore  Makefile  Vagrantfile  linux_provisioner.yml  pyproject.toml
.vagrant/bundler/: global.sol
.vagrant/machines/default/libvirt/: vagrant_cwd
ansible/: ansible.cfg  hosts.yml  justfile  latitude.yml  linux_provisioner.yml  main.yml  requirements.yml  test.yml
ansible/roles/base/defaults/: main.yml
ansible/roles/base/files/: cameron.pub  nextcloud-sync.service  nextcloud-sync.timer  vdirsyncer.service  vdirsyncer.timer
ansible/roles/base/molecule/default/: converge.yml  molecule.yml
ansible/roles/base/tasks/: aur.yml  dev.yml  main.yml  packages.yml
ansible/roles/dev/molecule/default/: converge.yml
ansible/roles/dev/tasks/: main.yml  packages.yml
ansible/roles/gaming/defaults/: main.yml
ansible/roles/gaming/molecule/default/: converge.yml  molecule.yml
ansible/roles/gaming/tasks/: main.yml
ansible/roles/laptop/files/: 50-net.reactivated.fprint.device.enroll.rules
ansible/roles/laptop/handlers/: main.yml
ansible/roles/laptop/molecule/default/: converge.yml
ansible/roles/laptop/tasks/: main.yml
configs/: aur.txt  core.json  laptop.json  p51.json  paru.sh  user_configuration.json  xps.json
configs/archinstall/: user_credentials.json  user_disk_layout.json
packer/: qemu.pkr.hcl
