[tool.poetry]
name = "archinstall"
version = "0.1.0"
description = ""
authors = ["Cameron Stevenson <cksteve@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.13.5"
molecule-vagrant = "^1.0.0"

[tool.poetry.dev-dependencies]
molecule = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
